@@ -118,9 +118,12 @@ ccm_pixmap_glitz_create_gl_drawable(CCMPixmapGlitz* self)
 			return FALSE;
 		}
 		
-		g_object_set(self, "y_invert", format->y_invert ? TRUE : FALSE, NULL);
+		g_object_set(self, "y_invert", format->y_inverted ? TRUE : FALSE, NULL);
 		
-		format->indirect = _ccm_screen_indirect_rendering (screen);
+		glitz_glx_set_render_type(CCM_DISPLAY_XDISPLAY(display),
+								  screen->number, 
+								  !_ccm_screen_indirect_rendering (screen));
+		
 		self->priv->gl_drawable = glitz_glx_create_pbuffer_drawable (
 											CCM_DISPLAY_XDISPLAY(display),
 											screen->number,
